add updateQuestStatus
